Fixed: alignment of cards

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -61,14 +61,14 @@
   }
 
   &__buy-button {
-    @extend %centringContent;
+    display: block;
+    padding: 10px 0 11px;
 
     background-color: $styleColorMoyo;
     border: 1px solid $styleColorMoyo;
     border-radius: 5px;
 
-    padding: 10px 68px 11px;
-
+    text-align: center;
     color: #fff;
     text-decoration: none;
     font-size: 1.4em;
