--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -1,22 +1,22 @@
 .catalog {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 
   padding: 50px 0;
 
   max-width: $catalogWidth;
   min-width: $catalogWidth;
-}
 
-.catalog__card {
-  margin: 0 48px 47px 0;
-}
+  &__card {
+    margin: 0 48px 47px 0;
 
-.catalog__card:nth-child(4n) {
-  margin-right: 0;
-}
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
 
-.catalog__card:nth-last-child(-n+4) {
-  margin-bottom: 0;
+    &:nth-last-child(-n+4) {
+      margin-bottom: 0;
+    }
+  }
 }
